--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
 
   </div>
 
-  <img src="images/imagesbreak.jpg" alt="break">
+ <div class="header">
+    <img src="images/imagesbreak.jpg" alt="break">
+  </div>
 
   <div class=center2>
 
